# school_pro_backend

./: .env  README.md  main.py  pyproject.toml
auth/: auth.py
db_connect/: db.py  settings.py
models/: user_model.py
router/: user_router.py
utils/: del_pycache.py  loguru.py
